--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 /node_modules
 /public/build
 /public/hot
-/public/storage
+public/storage
 /storage/*.key
 /vendor
-/.env
+.env
 .env.backup
-/.env.production
+.env.production
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
